--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,19 @@
     <groupId>org.example</groupId>
     <artifactId>socket server</artifactId>
     <version>1.0-SNAPSHOT</version>
-<!--    <build>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>6</source>
+                    <target>6</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <!--    <build>-->
 <!--        <plugins>-->
 <!--            <plugin>-->
 <!--                <groupId>org.apache.maven.plugins</groupId>-->
